--- a/deno/deno.json
+++ b/deno/deno.json
@@ -1,7 +1,8 @@
 {
+  "nodeModulesDir": "auto",
   "tasks": {
-    "dev": "deno run -A --watch --env-file main.ts",
-    "start": "deno run -A --env-file main.ts"
+    "dev": "deno run -A --allow-scripts --watch --env-file main.ts",
+    "start": "deno run -A --allow-scripts --env-file main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
